tests/syntax/error_induction_var_in_step.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g error_induction_var_in_step.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: error_induction_var_in_step.silly:10:23: error: Undeclared variable i
// CHECK:    10 | FOR (INT32 i: (0, 10, i+1))
// CHECK:       |                       ^
// CHECK: error_induction_var_in_step.silly:12:11: error: Undeclared variable i
// CHECK:    12 |     PRINT i;
// CHECK:       |           ^

FOR (INT32 i: (0, 10, i+1))
{ 
    PRINT i;
};
